--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <div class="container-services">
     <p>Serviços:</p>
-    <ul>
+    <ul class="list">
       <li>Revisão e negociação de contratos</li>
       <li>Due diligence Imobiliária</li>
       <li>Regularização de documentação</li>
